--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mapbox Custom Style Map</title>
+  <title>Residential Fixed Broadband</title>
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.10.0/mapbox-gl.css" rel="stylesheet" />
   <style>
     body, html { margin: 0; padding: 0; height: 100%; }
@@ -25,8 +25,8 @@
     const map = new mapboxgl.Map({
       container: 'map',
       style: customStyleURL, // Your custom style here
-      center: [-77.0369, 38.9072], // Starting position [lng, lat]
-      zoom: 12,
+      center: [-103.76, 44.966], // Starting position [lng, lat]
+      zoom: 5,
       pitch: 45,
       bearing: -17.6
     });
