--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
       container: 'map',
       style: customStyleURL, // Your custom style here
       center: [-103.76, 44.966], // Starting position [lng, lat]
-      zoom: 2,
-      pitch: 0,
-      bearing: -17.6
+      zoom: 3
     });
 
     // Add navigation controls (zoom + rotate)
